[gd_scene load_steps=2 format=3 uid="uid://shop123"]

[ext_resource type="Script" path="res://src/Scripts/UI/Shop.gd" id="1_shop"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_shop")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "ðŸ’° 150"

[node name="StartWaveButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Start Wave"

[node name="RefreshButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
text = "Refresh (10)"

[node name="ExpandButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
text = "Expand"

[connection signal="pressed" from="Panel/StartWaveButton" to="." method="_on_start_wave_button_pressed"]
[connection signal="pressed" from="Panel/RefreshButton" to="." method="_on_refresh_button_pressed"]
